--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "http-errors": "~1.6.3",
+    "mongoose": "^8.3.5",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
